<resources>
    <string name="app_name">Public Transport Timetable</string>
    <string name="app_title">Public Transport Timetable</string>
    <string name="app_subtitle">Manage your city transport network</string>

    <string name="lines">Lines</string>
    <string name="stops">Stops</string>
    <string name="routes">Routes</string>
    <string name="schedules">Schedules</string>

    <string name="manage_lines">Add, edit and delete transport lines</string>
    <string name="manage_stops">Manage stops and stations</string>
    <string name="manage_routes">Connect lines with stops</string>
    <string name="manage_schedules">Set up departure times</string>

    <string name="lines_icon_desc">Lines icon</string>
    <string name="stops_icon_desc">Stops icon</string>
    <string name="routes_icon_desc">Routes icon</string>
    <string name="schedules_icon_desc">Schedules icon</string>

    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="add_line">Add Line</string>
    <string name="edit_line">Edit Line</string>
    <string name="line_name">Line Name</string>
    <string name="line_type">Line Type</string>
    <string name="line_color">Line Color</string>
    <string name="type_bus">Bus</string>
    <string name="type_train">Train</string>
    <string name="type_subway">Subway</string>
    <string name="type_tram">Tram</string>

    <string name="add_stop">Add Stop</string>
    <string name="edit_stop">Edit Stop</string>
    <string name="stop_name">Stop Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accessibility">Wheelchair Accessible</string>

    <string name="add_route">Add Route</string>
    <string name="edit_route">Edit Route</string>
    <string name="select_line">Select Line</string>
    <string name="select_stop">Select Stop</string>
    <string name="stop_sequence">Stop Sequence</string>
    <string name="distance">Distance from Start (km)</string>

    <string name="add_schedule">Add Schedule</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="departure_time">Departure Time</string>
    <string name="weekday">Weekdays</string>
    <string name="weekend">Weekends</string>
    <string name="set_time">Set Time</string>

    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="delete_line_confirmation">Are you sure you want to delete this line? All routes and schedules associated with this line will also be deleted.</string>
    <string name="delete_stop_confirmation">Are you sure you want to delete this stop? All routes and schedules that include this stop will also be deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="error_empty_fields">Please fill in all required fields</string>
    <string name="error_invalid_coordinates">Please enter valid coordinates</string>
    <string name="error_invalid_time">Please enter a valid time</string>
</resources>